# liinac-virtual-accelerator

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker/: base.Dockerfile  beam-physics.Dockerfile  epics-gateway.Dockerfile  epics-ws.Dockerfile  web-gui-entrypoint.sh  web-gui.Dockerfile
docs/: OVERNIGHT_BUILD_PROMPT.md  OVERNIGHT_PROGRESS.md  OVERNIGHT_REPORT.md
docs/guides/: 00-overview.md  01-dashboard-3d.md  02-instrumentation.md  03-rf-magnets.md  04-operations.md  05-machine.md  06-remote-mobile.md  07-architecture-ai.md  08-determinism-and-branching.md  instrumentation-device-guide.md
docs/reports/: 2026-07-04-100-study-campaign.md  2026-07-04-project-report.md
docs/research/: instrumentation_utilities_report.md  linac2_lattice_inventory.md  pip2_facts_pack.md  pip2_machine_report.md  srf_beamline_report.md
pip2va/: __init__.py  mobile.py
pip2va/analysis/: llm.py  (+8 more)
scripts/: bench_envelope.py  bootstrap_new_host.sh  e2e_check.py  gen_errors.py  gen_lattice.py  health_check.sh  match_lattice.py  scan_mebt.py  smoke_compose.py
tests/: conftest.py  test_analysis.py  test_autotune.py  test_beam_service.py  test_branch.py  test_codec.py  test_determinism.py  test_devsims.py  test_diag_mps.py  test_envelope.py  test_errors.py  test_gui_smoke.py  test_keys.py  test_lattice.py  test_limits.py  test_lorentz.py  test_macro.py  test_maps.py  test_optimizer.py  test_replay.py  test_snapshots.py  test_studies.py  test_timetravel.py  test_timing.py  test_waveforms.py
webapp/: .gitignore  .metadata  README.md  pubspec.yaml
(+599 files in other folders)
